fix horizontal scroll

--- a/src/css/mainPage/index.css
+++ b/src/css/mainPage/index.css
@@ -517,7 +517,12 @@ footer {
 
 @media all and (max-width: 1400px) {
   .content-container {
-    width: 52.2em;
+    box-sizing: border-box;
+    width: 100%;
+  }
+
+  .section-container {
+    width: 80%;
   }
 
   .section-container,
@@ -611,11 +616,7 @@ footer {
   .content-container {
     box-sizing: border-box;
     width: 100%;
-    padding: 0 3em 0 3em;
-  }
-
-  .vertical-inscription {
-    right: -2em;
+    padding: 0 2em 0 2em;
   }
 
   .swiper-container {
@@ -668,6 +669,17 @@ footer {
     top: 103em;
   }
 
+  .budget-image,
+  .power-image-container {
+    width: 100%;
+    min-width: 0;
+    margin: 0;
+  }
+
+  .power-image {
+    min-width: 0;
+  }
+
   .cubes-container {
     width: 155%;
     height: 114%;
@@ -705,6 +717,14 @@ footer {
 
   .improvement-section .inner-section-image {
     top: -27em;
+  }
+
+  .advantage-section .inner-section-text,
+  .expertise-section .inner-section-text,
+  .improvement-section .inner-section-text,
+  .supervise-section .inner-section-text,
+  .toolset-section .inner-section-text {
+    margin: 0;
   }
 }
 
